--- a/app/src/main/res/layout/tests_list_offline_card_item.xml
+++ b/app/src/main/res/layout/tests_list_offline_card_item.xml
@@ -1,9 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:padding="2dp">
+    android:paddingEnd="2dp"
+    android:paddingLeft="2dp"
+    android:paddingRight="2dp"
+    android:paddingStart="2dp">
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
@@ -12,25 +15,27 @@
         app:cardUseCompatPadding="true">
 
         <RelativeLayout
-            android:layout_width="match_parent"
             android:id="@+id/testitem_cardview"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="?attr/selectableItemBackground"
-            android:clickable="true">
+            android:clickable="true"
+            android:focusable="true">
+
             <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:id="@+id/linearLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_alignParentTop="true"
-                android:orientation="horizontal"
                 android:baselineAligned="false"
+                android:orientation="horizontal"
                 android:padding="5dp">
 
                 <LinearLayout
-                    android:orientation="vertical"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="4"
+                    android:orientation="vertical"
                     android:padding="7dp">
 
                     <TextView
@@ -41,35 +46,36 @@
                         android:textSize="20sp" />
 
                     <TextView
+                        android:id="@+id/testitem_lasttime"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:id="@+id/testitem_lasttime"
-                        android:textStyle="italic"
-                        android:singleLine="true" />
+                        android:singleLine="true"
+                        android:textStyle="italic" />
 
                 </LinearLayout>
 
                 <LinearLayout
-                    android:orientation="vertical"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
+                    android:layout_marginRight="7dp"
                     android:layout_weight="1"
-                    android:layout_marginRight="7dp">
+                    android:orientation="vertical"
+                    android:layout_marginEnd="7dp">
 
                     <TextView
+                        android:id="@+id/testitem_progress"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:id="@+id/testitem_progress"
+                        android:layout_gravity="center"
                         android:paddingLeft="10dp"
-                        android:paddingRight="10dp"
-                        android:layout_gravity="center" />
+                        android:paddingRight="10dp" />
 
                     <ProgressBar
+                        android:id="@+id/testitem_progressbar"
                         style="?android:attr/progressBarStyleHorizontal"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:id="@+id/testitem_progressbar"
                         android:layout_gravity="center" />
                 </LinearLayout>
 
